--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,10 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="HuTaoHelper" Height="450" Width="800">
+        Loaded="MainWindow_OnLoaded"
+        Title="HuTaoHelper" Height="450" Width="500">
     <Grid>
-        <StackPanel Margin="10">
-            <Button Name="Test" Click="Test_OnClick">Test</Button>
-        </StackPanel>
+        <ListView Name="AccountsList" />
     </Grid>
 </Window>
