--- a/Templates.xaml
+++ b/Templates.xaml
@@ -1,7 +1,8 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:core="clr-namespace:HuTaoHelper.Core"
-                    xmlns:control="clr-namespace:HuTaoHelper.Control">
+                    xmlns:control="clr-namespace:HuTaoHelper.Control"
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <DataTemplate x:Key="{DataTemplateKey {x:Type core:Account}}" DataType="{x:Type core:Account}">
         <Grid>
             <Grid.RowDefinitions>
@@ -11,14 +12,21 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="10" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Ellipse Grid.Column="0" Grid.Row="0" Width="30" Height="30" Fill="#FFFFE4C4" />
             <Border Grid.Column="0" Grid.Row="0" Width="30" Height="30">
-                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding NameCharacter}" />
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding DisplayNameCharacter}" />
             </Border>
-            <Border Grid.Column="2" Grid.Row="0" Height="30">
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding Name}" />
+            <Border Grid.Column="2" Grid.Row="0">
+                <StackPanel VerticalAlignment="Center" Orientation="Vertical">
+                    <TextBlock HorizontalAlignment="Left" Text="{Binding DisplayName}" />
+                    <TextBlock HorizontalAlignment="Left" Text="{Binding Status}" Foreground="Silver"/>
+                </StackPanel>
             </Border>
+            <Button Grid.Column="3" Grid.Row="0" Command="{x:Static control:GlobalCommands.CHECK_IN}">
+                <materialDesign:PackIcon Kind="HandCoin" />
+            </Button>
         </Grid>
     </DataTemplate>
     <DataTemplate x:Key="{DataTemplateKey {x:Type control:BaseGameHandle}}" DataType="{x:Type control:BaseGameHandle}">
