--- a/Windows/AutologinSelectHandleWindow.xaml
+++ b/Windows/AutologinSelectHandleWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="HuTaoHelper.AutologinSelectHandleWindow"
+<Window x:Class="HuTaoHelper.Windows.AutologinSelectHandleWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
