--- a/Windows/WebLoginWindow.xaml
+++ b/Windows/WebLoginWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="HuTaoHelper.WebLoginWindow"
+<Window x:Class="HuTaoHelper.Windows.WebLoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
