--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Loaded="MainWindow_OnLoaded"
+        Closing="MainWindow_OnClosing"
         Title="HuTaoHelper" Height="550" Width="550">
     <Grid>
         <Grid.RowDefinitions>
