--- a/Windows/WebLoginWindow.xaml
+++ b/Windows/WebLoginWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:local="clr-namespace:HuTaoHelper"
         mc:Ignorable="d"
         Loaded="TestWindow_OnLoaded"
+        ResizeMode="CanResize"
         Title="Authentication" Height="800" Width="1200">
     <Grid>
         <DockPanel>
