--- a/Windows/AddAccountWindow.xaml
+++ b/Windows/AddAccountWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:HuTaoHelper.Windows"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:visual="clr-namespace:HuTaoHelper.Visual"
-        xmlns:viewModels="clr-namespace:HuTaoHelper.Visual.ViewModels"
+        xmlns:viewModels="clr-namespace:HuTaoHelper.View.ViewModels"
+        xmlns:view="clr-namespace:HuTaoHelper.View"
+        xmlns:validation="clr-namespace:HuTaoHelper.View.Validation"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance viewModels:AddAccountViewModel, IsDesignTimeCreatable=False}"
         Loaded="AddAccountWindow_OnLoaded"
@@ -38,7 +39,7 @@
                 <TextBox.Text>
                     <Binding Path="Login" UpdateSourceTrigger="PropertyChanged">
                         <Binding.ValidationRules>
-                            <visual:NotEmptyValidationRule ValidatesOnTargetUpdated="True" />
+                            <validation:NotEmptyValidationRule ValidatesOnTargetUpdated="True" />
                         </Binding.ValidationRules>
                     </Binding>
                 </TextBox.Text>
@@ -70,7 +71,7 @@
                 <TextBox.Text>
                     <Binding Path="Password" UpdateSourceTrigger="PropertyChanged">
                         <Binding.ValidationRules>
-                            <visual:NotEmptyValidationRule ValidatesOnTargetUpdated="True" />
+                            <validation:NotEmptyValidationRule ValidatesOnTargetUpdated="True" />
                         </Binding.ValidationRules>
                     </Binding>
                 </TextBox.Text>
