--- a/Templates.xaml
+++ b/Templates.xaml
@@ -5,31 +5,36 @@
                     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                     xmlns:view="clr-namespace:HuTaoHelper.View">
     <DataTemplate x:Key="{DataTemplateKey {x:Type core:Account}}" DataType="{x:Type core:Account}">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="10" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <Ellipse Grid.Column="0" Grid.Row="0" Width="50" Height="50">
-                <Ellipse.Fill>
-                    <ImageBrush ImageSource="{Binding AvatarUrl}" />
-                </Ellipse.Fill>
-            </Ellipse>
-            <Border Grid.Column="2" Grid.Row="0">
-                <StackPanel VerticalAlignment="Center" Orientation="Vertical">
-                    <TextBlock HorizontalAlignment="Left" FontSize="18" Text="{Binding DisplayName}" />
-                    <TextBlock HorizontalAlignment="Left" FontSize="18" Text="{Binding Uid}" Foreground="Silver"/>
-                </StackPanel>
-            </Border>
-            <Button Grid.Column="3" Grid.Row="0" Command="{x:Static view:GlobalCommands.CheckIn}">
-                <materialDesign:PackIcon Kind="HandCoin" />
-            </Button>
-        </Grid>
+        <Border Background="Transparent">
+            <Border.InputBindings>
+                <MouseBinding MouseAction="LeftClick" Command="{x:Static view:GlobalCommands.AutoLogin}"/>
+            </Border.InputBindings>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Ellipse Grid.Column="0" Grid.Row="0" Width="50" Height="50">
+                    <Ellipse.Fill>
+                        <ImageBrush ImageSource="{Binding AvatarUrl}" />
+                    </Ellipse.Fill>
+                </Ellipse>
+                <Border Grid.Column="2" Grid.Row="0" Background="Transparent">
+                    <StackPanel VerticalAlignment="Center" Orientation="Vertical">
+                        <TextBlock HorizontalAlignment="Left" FontSize="18" Text="{Binding DisplayName}" />
+                        <TextBlock HorizontalAlignment="Left" FontSize="18" Text="{Binding Uid}" Foreground="Silver"/>
+                    </StackPanel>
+                </Border>
+                <Button Grid.Column="3" Grid.Row="0" Command="{x:Static view:GlobalCommands.CheckIn}">
+                    <materialDesign:PackIcon Kind="HandCoin" />
+                </Button>
+            </Grid>
+        </Border>
     </DataTemplate>
     <DataTemplate x:Key="{DataTemplateKey {x:Type control:BaseGameHandle}}" DataType="{x:Type control:BaseGameHandle}">
         <Grid>
