--- a/HuTaoHelper.Visual/App.xaml
+++ b/HuTaoHelper.Visual/App.xaml
@@ -11,6 +11,7 @@
                 <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
                 <ResourceDictionary Source="/Templates.xaml" />
+                <ResourceDictionary Source="/Tray.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
