Fix validation not updated after typing

--- a/HuTaoHelper.Visual/View/Dialogs/AddNotificationTargetDialog.xaml
+++ b/HuTaoHelper.Visual/View/Dialogs/AddNotificationTargetDialog.xaml
@@ -42,7 +42,7 @@
                                  FontSize="18"
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}">
                             <TextBox.Text>
-                                <Binding Path="BotToken">
+                                <Binding Path="BotToken" UpdateSourceTrigger="PropertyChanged">
                                     <Binding.ValidationRules>
                                         <validation:NotEmptyValidationRule ValidatesOnTargetUpdated="True" />
                                     </Binding.ValidationRules>
@@ -56,7 +56,7 @@
                                  FontSize="18"
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}">
                             <TextBox.Text>
-                                <Binding Path="ChatId">
+                                <Binding Path="ChatId" UpdateSourceTrigger="PropertyChanged">
                                     <Binding.ValidationRules>
                                         <validation:IntValidationRule ValidatesOnTargetUpdated="True" />
                                     </Binding.ValidationRules>
